--- a/pom.xml
+++ b/pom.xml
@@ -10,10 +10,10 @@
   <packaging>jar</packaging>
 
   <name>the-little-interpreter</name>
-  <description>a mini lisp interpreter in scala</description>
+  <description>a mini lisp interpreter</description>
 
   <properties>
-    <scala.version>2.12.1</scala.version>
+    <scala.version>2.12.2</scala.version>
     <java.version>1.8</java.version>
     <encoding>UTF-8</encoding>
   </properties>
@@ -91,7 +91,7 @@
             <configuration>
               <transformers>
                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                  <mainClass>io.airt.interpreter.TLI</mainClass>
+                  <mainClass>wheels.airt.interpreter.Main</mainClass>
                 </transformer>
               </transformers>
             </configuration>
